[package]
name = "kotaru-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.11.1", features = ["full"] }
clap = { version = "4.5.31", features = ["derive"] }
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
eyre = { version = "0.6", default-features = false, features = ["auto-install", "track-caller"] }
anyhow = { version = "1.0", default-features = false }


