[package]
name = "kotaru"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
tokio = { version = "1.44.0", features = ["full"] }

# error handling
anyhow = { version = "1.0.97" }

# cli
clap = { version = "4.5.31", features = ["derive"] }

# dir
dirs = "6.0.0"


# eth
alloy = { version = "0.11.1", features = ["full"] }
eyre = { version = "0.6", default-features = false, features = ["auto-install", "track-caller"] }
